--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": ">=14.15.0"
+    "dev": "serverless offline",
+    "deploy": "sls deploy -v"
   },
   "dependencies": {
     "@middy/core": "^1.5.2",
@@ -19,11 +17,15 @@
     "@types/node": "^14.14.25",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.17.1",
+    "serverless-offline": "^8.2.0",
+    "serverless-webpack": "^5.5.5",
+    "ts-loader": "^9.2.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
-  },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+    "typescript": "^4.1.3",
+    "webpack": "^5.58.2",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
