--- a/serverless.yml
+++ b/serverless.yml
@@ -25,12 +25,12 @@ provider:
   region: sa-east-1
 
 functions:
-  hello:
-    handler: src/functions/hello.handle
+  GenerateCertificate:
+    handler: src/functions/GenerateCertificate.handle
     events:
       - http:
-          path: /hello
-          method: GET
+          path: /generateCertificate
+          method: POST
           cors: true
 
 resources:
