Deployed in AWS

--- a/serverless.yml
+++ b/serverless.yml
@@ -22,8 +22,17 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs14.x
   region: sa-east-1
+  runtime: nodejs14.x
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+       - dynamodb:*
+      Resource: "*"
+    - Effect: Allow
+      Action:
+        - s3:*
+      Resource: "*"
 
 functions:
   GenerateCertificate:
@@ -33,6 +42,13 @@ functions:
           path: /generateCertificate
           method: POST
           cors: true
+    iamRoleStatements:
+      - Effect:
+        Action:
+          - dynamodb:Query
+          - dynamodb:PutItem
+        Resource: 
+          - "arn:aws:dynamodb:${self.provider.region}:*:table/users_certificates"
   VerifyCertificate:
     handler: src/functions/verifyCertificate.handle
     events:
@@ -40,6 +56,11 @@ functions:
           path: /verifyCertificate/{id}
           method: GET
           cors: true
+    iamRoleStatements:
+      - Effect:
+        Action:
+          - dynamodb:Query
+        Resource: "arn:aws:dynamodb:${self.provider.region}:*:table/users_certificates"
 
 resources:
   Resources:
